@@ -43,7 +43,7 @@ h2_request *h2_request_clone(apr_pool_t *p, const h2_request *src);
  * @param conn the connection to process the request on
  * @return the request_rec representing the request
  */
-request_rec *h2_request_create_rec(const h2_request *req, conn_rec *conn);
+request_rec *h2_create_request_rec(const h2_request *req, conn_rec *conn);
 
 
 #endif /* defined(__mod_h2__h2_request__) */
